# ship-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.agents/skills/audit-docs/: SKILL.md
.agents/skills/audit-pr/: SKILL.md
.agents/skills/execute-phase/: SKILL.md
.agents/skills/init-workspace/: SKILL.md
.agents/skills/plan-feature/: SKILL.md
.agents/skills/plan-feature-from-issue/: SKILL.md
.agents/skills/plan-feature-interview/: SKILL.md
.agents/skills/plan-feature-scaffold/: SKILL.md
.agents/skills/plan-fix/: SKILL.md
.agents/skills/product-audit/: SKILL.md
.agents/skills/review-change/: SKILL.md
.agents/skills/review-implementation/: SKILL.md
.agents/skills/ship-roadmap/: SKILL.md
.agents/skills/triage-issue/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
docs/: PROCESS.md  conversation-log.md
docs/features/: ROADMAP.md  SHIP_DECISIONS.md
docs/features/01-skeleton/: REVIEW.md  SPEC.md
docs/features/02-basic-json-to-csv/: REVIEW.md  SPEC.md
docs/features/03-delimiter-flag/: REVIEW.md  SPEC.md
docs/features/04-nested-flatten/: CHECKLIST.md  SPEC.md
docs/features/05-human-test-sample/: CHECKLIST.md  SPEC.md
docs/features/_TEMPLATE/: SPEC.md
docs/fix/: README.md
docs/fix/07-delimiter-metavar/: SPEC.md
docs/fix/11-empty-nested-row/: SPEC.md
docs/fix/3-version-metadata/: SPEC.md
docs/workflow/: README.md
examples/: input.json  run_sample.sh
src/json2csv/: __init__.py  cli.py  converter.py
tests/: test_cli.py  test_converter.py
