[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json2csv"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
json2csv = "json2csv.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/json2csv"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
